# FortModGen

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  fortmodgen.cc
cmake/Modules/: FortModGen.cmake  FortModGenConfig.cmake.in  module_name.cc
config/: example.toml
src/: CMakeLists.txt  FortranModuleGenerator.cc  FortranModuleGenerator.h  types.cc  types.h  utils.h
src/interfaces/: CInterfaceGenerator.cc  CInterfaceGenerator.h  CMakeLists.txt
test/: CMakeLists.txt  cpptest.cc  cppwrite.cc  cwrite.c  ftest.f90  full_precision_parameter_test.cc  fwrite.f90  testmod.toml
tests/: FortranTestGen.cc  FortranTestGen.h
